[package]
name = "minstant"
version = "0.1.4"
authors = ["The TiKV Authors"]
edition = "2021"
license = "MIT"
description = "A drop-in replacement for `std::time::Instant` that measures time with high performance and high accuracy powered by TSC"
homepage = "https://github.com/tikv/minstant"
repository = "https://github.com/tikv/minstant"
documentation = "https://docs.rs/minstant"
readme = "README.md"
keywords = ["TSC", "clock", "rdtsc", "timing", "nanosecond"]
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ctor = "0.1.20"
coarsetime = "0.1"

[features]
atomic = []

[dev-dependencies]
criterion = "0.3"
quanta = "0.9"
rand = "0.8"

[[bench]]
name = "criterion"
harness = false
